Ported modifications developed for use at AOL

--- a/src/Final/index.html
+++ b/src/Final/index.html
@@ -38,14 +38,14 @@
 			</a>
 
 			<div class="wrapper style4">
-
 						<a href="http://www.opendns.com"><img src="images/opendns_logo.png" width = "10%" height ="5%" /></a>
 						<br><br>
 						<ul id="copyright">
-
-							<li>&copy; OpenDNS. All rights reserved.</li><li><a href="http://engineering.opendns.com/security/" target="_blank">OpenDNS Security</a></li>
+							<li>&copy; OpenDNS. All rights reserved.</li>
+							<li><a href="http://engineering.opendns.com/security/" target="_blank">OpenDNS Security</a></li>
+							<li>Modified by <a href="http://siege.org">CJ Niemira</a>.</li>
 						</ul>
-
+						<a href="https://github.com/cniemira/security-ninjas"><img src="images/github.png" align="center" /></a>
 				</article>
 			</div>
 
